--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "atomic-algolia": "^0.3.19"
   },
   "devDependencies": {
-    "core-js": "^3.29.1",
-    "fsevents": "^2.3.2"
+    "core-js": "^3.29.1"
   }
 }
