--- a/config.yaml
+++ b/config.yaml
@@ -16,14 +16,12 @@ outputs:
     - HTML
     - RSS
     - Algolia
-    
 outputFormats:
   Algolia:
     baseName: algolia
     isPlainText: true
     mediaType: application/json
     notAlternative: true
- 
 markup:
   tableOfContents:
     endLevel: 2
@@ -45,15 +43,15 @@ params:
   image_404: img/404-bg.jpg
   title_404: 'You have reached a barren land with no knowledge :('
 
-  page_view_conter: false
-  leancloud_app_id: ""
-  leancloud_app_key: ""
+  page_view_counter: true
+  leancloud_app_id: "xPw359Vqc2mJIQwyn3kk1tr6-MdYXbMMI"
+  leancloud_app_key: "oWnYnSQrRigb5tOZHi4rcIGO"
   
   # Algolia site search
   algolia_search: true
-  algolia_appId: "N89YM3N668"
-  algolia_indexName: "test_20190722"
-  algolia_apiKey: "824114b6bdea662f38f5a26b53c6e2a0"
+  algolia_appId: "CZ87M76Q78"
+  algolia_indexName: "blog_search_index"
+  algolia_apiKey: "98c6934dd39cfb1bacb02e525062e7de"
   
   # Sidebar settings
   sidebar_about_description: "Senior Software Engineer, Open source enthusiast, PMP, Scrum master"
